# memoryfs

./: LICENSE  README.md  memoryfs.cabal
src/Data/: MemoryFS.hs
src/Data/MemoryFS/: FileSystem.hs
