name: memoryfs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: anshu.avinash35@gmail.com
category: Data
author: Anshu Avinash

library
    build-depends:
        base >=4.7 && <5,
        containers >=0.5 && <0.6,
        split >=0.2 && <0.3
    exposed-modules:
        Data.MemoryFS
        Data.MemoryFS.FileSystem
    default-language: Haskell2010
    hs-source-dirs: src
